Add email report command with portfolio chart attachment

--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ psycopg2-binary==2.9.10
 pycparser==2.22
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-dotenv==1.1.0
 pytz==2025.2
 redis==6.2.0
